--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -1,6 +1,6 @@
 ---
-title: Golden
-subtitle: Website Design
+title: Gadget Corner
+subtitle: The latest and greatest new gadgets.
 layout: default
 modal-id: 3
 date: 2014-07-16
