--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,15 +1,15 @@
 ---
-title: Escape
-subtitle: Website Design
+title: SpaceX Announces First Commercial Space Station 
+subtitle: Future News
 layout: default
 modal-id: 2
 date: 2014-07-17
-img: escape.png
-thumbnail: escape-thumbnail.png
+img: BFR_Full_Size.jpg
+thumbnail: BFR_thumbnail.jpg
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
-category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+category: News Article
+description: SpaceX CEO Elon musk announced the opening a center of operations for space-based industry. Musk’s "Moon Base” will be a logistics hub for the company’s new earth to space hauling service. The Transportation is to be provided by the BFR Platform widely used in the SpaceX earth to earth passenger and cargo hauling services. “The earth to space hauling will use the same infrastructure used in our current global transportation services”. In addition to the construction of the new moon base, SpaceX is expanding the sea-based launch platforms that up until now have been used for quick transportation of cargo and people to the other side of the world. “Think of this as just another destination on the SpaceX roster. Our BFR spacecraft will launch into low earth orbit, and instead of coming back down to one of our earth-based platforms, it continues on to the moon. The whole trip should take about the same about of time as our 34-minute London to Honk Kong flight.
 
 ---
