--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -1,15 +1,16 @@
 ---
 title: Tech Through Time
-subtitle: History's most important tech innovations for the average person
+subtitle: History's top tech innovations 
 layout: default
 modal-id: 1
 date: 2014-07-18
-img: dreams.png
-thumbnail: dreams-thumbnail.png
+img: 
+thumbnail: lightbulb.jpg
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
 category: Timeline
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+sub-about: True
+description:
 
 ---
