--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -1,6 +1,6 @@
 ---
-title: Round Icons
-subtitle: Graphic Design
+title: Building Blocks for the Future
+subtitle: Blockchain, and why it's not just hype
 layout: default
 modal-id: 6
 date: 2014-07-15
