--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -4,12 +4,12 @@ subtitle: The latest and greatest new gadgets.
 layout: default
 modal-id: 3
 date: 2014-07-16
-img: golden.png
+img: SiriX.png
 thumbnail: Gadgets.jpg
 alt: image-alt
-project-date: April 2014
+project-date: July 2020
 client: Start Bootstrap
-category: Web Development
+category: Advertisement
 description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
 
 ---
