revision to works cited

--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -7,9 +7,9 @@ date: 2014-07-14
 img: Notes2.png
 thumbnail: Notes3.png
 alt: image-alt
-project-date: April 2014
+project-date: October 2018
 client: Start Bootstrap
-category: Web Development
+category: Notes Page and Works cited
 description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
 
 ---
